--- a/Social_Media/src/App.css
+++ b/Social_Media/src/App.css
@@ -11,3 +11,19 @@
   margin: 20px 50px;
   min-height: 450px;
 }
+.card{
+  margin: 15px;
+  text-align: center;
+}
+.body{
+  display: flex;
+  flex-wrap: wrap;
+}
+.hashtag{
+  margin: 5px;
+  padding: 10px;
+  font-size: large;
+}
+.alert{
+  margin: 5px;
+}
